# orientation-analysis-suite

./: .gitignore  CLUSTERING_KINETICS.md  LICENSE  README.md  pyproject.toml
membrane_analysis/: CLAUDE.md  PROGRESS.md  environment.yml  example_config.yaml  example_stats.yaml  repo_citations.md  run_analysis.py
membrane_analysis/analyses/: anchor_insertion.py  apl.py  clustering.py  contacts.py  gmm.py  hbonds.py  hdbscan_explorer.py  inter_residue_distance.py  kinetics.py  lobe_com.py  pp_distance.py  rmsd.py  tilt_rotation.py
membrane_analysis/core/: config.py  features.py  io.py  plotting.py
membrane_analysis/equil_namd_files/: newequ.namd  prod.namd
membrane_analysis/tools/: README.md  trajtools.py
